Assignment 2: Undo must also remove the top of the stack

--- a/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/en.lproj/MainStoryboard.storyboard
@@ -368,7 +368,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="clearDigit" destination="2" eventType="touchUpInside" id="JKI-0v-Zbk"/>
+                                            <action selector="clearLast" destination="2" eventType="touchUpInside" id="Neh-B1-Sih"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="nCR-Mr-WrY">
