Lecture 4: Demo - Hook up outlineAndFill: correctly
Add fixes and adjustments so that the several combinations of outline:,
unoutline:, and outlineAndFill: make sense when combined together with 
the changeColor: action of the colour buttons.

--- a/2013 Winter/Attribute/Attribute/en.lproj/MainStoryboard.storyboard
+++ b/2013 Winter/Attribute/Attribute/en.lproj/MainStoryboard.storyboard
@@ -163,7 +163,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="AvO-vM-itL">
-                                <rect key="frame" x="171" y="351" width="112" height="44"/>
+                                <rect key="frame" x="171" y="351" width="59" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Outline">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -174,6 +174,20 @@
                                 </state>
                                 <connections>
                                     <action selector="outline" destination="2" eventType="touchUpInside" id="HC8-vq-Kz0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YEf-tJ-c1M">
+                                <rect key="frame" x="233" y="351" width="50" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="&amp; Fill">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="outlineAndFill" destination="2" eventType="touchUpInside" id="0fc-of-zBP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pv0-3q-Uu2">
