--- a/2013 Winter/Matchismo/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/2013 Winter/Matchismo/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -361,10 +361,10 @@
             </objects>
             <point key="canvasLocation" x="114" y="88"/>
         </scene>
-        <!--View Controller - Scores-->
+        <!--Game Result View Controller - Scores-->
         <scene sceneID="NR9-mM-hzT">
             <objects>
-                <viewController id="fu5-0J-UTJ" sceneMemberID="viewController">
+                <viewController id="fu5-0J-UTJ" customClass="GameResultViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="568-K9-DcC">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -404,6 +404,9 @@
                 <relationship kind="outlet" name="scoreDisplay" candidateClass="UILabel"/>
                 <relationship kind="outletCollection" name="cardButtons" candidateClass="UIButton"/>
             </relationships>
+        </class>
+        <class className="GameResultViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GameResultViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
