--- a/2013 Winter/Matchismo/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/2013 Winter/Matchismo/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -380,6 +380,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Scores" image="hash.png" id="DAD-Iv-8cP"/>
+                    <connections>
+                        <outlet property="display" destination="iRT-UF-RLp" id="qDt-jz-fha"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIY-uo-S0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -407,6 +410,9 @@
         </class>
         <class className="GameResultViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GameResultViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="display" candidateClass="UITextView"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
